...
                children: [
                  // Login button
                  SizedBox(
                    width: double.infinity,
                    height: 56,
                    child: ElevatedButton(
                      key: const Key('welcomeLoginButton'),
                      onPressed: () => context.push('/login'),
                      child: Text(l10n.login),
                    ),
                  ),
                  const SizedBox(height: 16),

...
